--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </section>
         <section class="w-full relative h-700 px-[10rem] py-20 mt-80">
             <div class="w-full sticky bg-white z-[2] top-0 flex items-center gap-10 px-10 py-8">
-                <h1 class="text-8xl tracking-tighter font-medium">2017</h1>
+                <h1 class="text-8xl tracking-tighter font-medium">2018</h1>
                 <div class="w-70 h-1 bg-black"></div>
                 <h1 class="text-8xl text-zinc-400 tracking-tighter font-medium">The Beginning</h1>
             </div>
@@ -74,7 +74,7 @@
         </section>
         <section class="w-full relative h-700 px-[10rem] py-20">
             <div class="w-full sticky bg-white z-[2] top-0 flex items-center gap-10 px-10 py-8">
-                <h1 class="text-8xl tracking-tighter font-medium">2018</h1>
+                <h1 class="text-8xl tracking-tighter font-medium">2019</h1>
                 <div class="w-70 h-1 bg-black"></div>
                 <h1 class="text-8xl text-zinc-400 tracking-tighter font-medium">Escalation</h1>
             </div>
@@ -114,7 +114,7 @@
                 <div class="mt-20">
                     <h1 class="text-5xl font-medium tracking-tight">Britannia</h1>
                     <div class="flex gap-2 mt-3">
-                        <h3 class="text-2xl font-medium font-['IBM_3270']">2017</h3>
+                        <h3 class="text-2xl font-medium font-['IBM_3270']">2018</h3>
                         <img class="w-20" src="./assets/arrow.png" alt="">
                         <h3 class="text-2xl font-medium">Mumbai</h3>
                     </div>
@@ -128,7 +128,7 @@
                     <div class="w-150 py-3">
                         <h1 class="text-6xl font-medium tracking-tight">Orange Splash</h1>
                         <div class="flex gap-2 mt-3">
-                            <h3 class="text-4xl font-medium font-['IBM_3270']">2022</h3>
+                            <h3 class="text-4xl font-medium font-['IBM_3270']">2023</h3>
                             <img class="w-30" src="./assets/arrow.png" alt="">
                             <h3 class="text-3xl font-medium">Paris</h3>
                         </div>
@@ -141,9 +141,9 @@
                     <div class="w-300 py-3 mt-30">
                         <h1 class="text-6xl font-medium tracking-tight">Palm Jumerah</h1>
                         <div class="flex gap-2 mt-3">
-                            <h3 class="text-4xl font-medium font-['IBM_3270']">2025</h3>
+                            <h3 class="text-4xl font-medium font-['IBM_3270']">2024</h3>
                             <img class="w-30" src="./assets/arrow.png" alt="">
-                            <h3 class="text-3xl font-medium">Saudi</h3>
+                            <h3 class="text-3xl font-medium">NY</h3>
                         </div>
                         <div class="w-full h-190 mt-3 bg-red-500">
                             <img class="w-full h-full object-cover"
@@ -155,7 +155,7 @@
             </div>
         </section>
         <section class="footer flex justify-between px-[10rem] mt-20">
-            <h3 class="tracking-tight"><span class="font-bold">Harsh</span> Vandana Sharma</h3>
+            <h3 class="tracking-tight"><span class="font-bold">Shaha</span> Jahan Sheikh</h3>
             <h4 class="font-medium dt">10 Feb. 2025 [07:11 PM]</h4>
         </section>
     </main>
